# Multi_Agent_Campaign_Creator

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  art_director_agent.py  base_agent.py  copywriter_agent.py  manager_agent.py  research_agent.py
src/models/: __init__.py  campaign_models.py
src/multi_agent_campaign_creator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tasks/: __init__.py  campaign_tasks.py
src/tools/: __init__.py  competitor_analysis_tool.py  copy_evaluation_tool.py  image_prompt_tool.py  trend_research_tool.py
src/workflow/: __init__.py  crew_workflow.py
tests/: __init__.py  conftest.py  test_agents.py  test_tools.py  test_workflow.py
